force-app/main/default/objects/AH_UDC_Contact__c/AH_UDC_Contact__c.object-meta.xml
<CustomObject>
    <description>This is a junction object for assigning contacts to the NI Documentation record for Unified Data Collection</description>
    <label>UDC Contact</label>
    <nameField>
        <displayFormat>DCC-{0000}</displayFormat>
        <label>Data Collection Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UDC Contacts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>