force-app/main/default/objects/AH_UDC_Contact__c/fields/ChatterLastViewed__c.field-meta.xml
<CustomField>
    <fullName>ChatterLastViewed__c</fullName>
    <description>This will be updated with the current date and time when community user access Chatter page.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Chatter Last Viewed</label>
    <type>DateTime</type>
</CustomField>