force-app/main/default/objects/AH_UDC_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact that should be associated to the document</description>
    <inlineHelpText>Contact that should be associated to the document</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Data_Collection_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>