force-app/main/default/objects/AH_UDC_Contact__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <description>Contact Name</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, Contact__r.FirstName + &apos; &apos; + Contact__r.LastName ,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contact Name</inlineHelpText>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>