force-app/main/default/objects/AH_UDC_Contact__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the document record that this contact is associated to.</description>
    <inlineHelpText>This is the document record that this contact is associated to.</inlineHelpText>
    <label>Document</label>
    <referenceTo>NI_Documentation__c</referenceTo>
    <relationshipName>Data_Collection_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>