force-app/main/default/objects/AH_UDC_Contact__c/fields/DocumentName__c.field-meta.xml
<CustomField>
    <fullName>DocumentName__c</fullName>
    <description>Document Name</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Document__c, Document__r.Document_Name__c,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Document Name</inlineHelpText>
    <label>Document Name</label>
    <type>Text</type>
</CustomField>