force-app/main/default/objects/AH_UDC_Contact__c/fields/NIDocumentOwner__c.field-meta.xml
<CustomField>
    <fullName>NIDocumentOwner__c</fullName>
    <description>Created so the owner of the NI Document will display on reports</description>
    <formula>Document__r.Owner:User.FirstName &amp; &quot; &quot; &amp;  Document__r.Owner:User.LastName</formula>
    <inlineHelpText>Created so the owner of the NI Document will display on reports</inlineHelpText>
    <label>NI Document Owner</label>
    <type>Text</type>
</CustomField>