force-app/main/default/objects/AH_UDC_Contact__c/fields/OptIntoSocialMedia__c.field-meta.xml
<CustomField>
    <fullName>OptIntoSocialMedia__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates that the contact has opted into social media/chatter.</description>
    <inlineHelpText>This indicates that the contact has opted into social media/chatter.</inlineHelpText>
    <label>Opt Into Social Media</label>
    <type>Checkbox</type>
</CustomField>