force-app/main/default/objects/AH_UDC_Contact__c/fields/OptIntoSocialMediaDate__c.field-meta.xml
<CustomField>
    <fullName>OptIntoSocialMediaDate__c</fullName>
    <description>The date the contact opted into social media/chatter</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the contact opted into social media/chatter</inlineHelpText>
    <label>Opt Into Social Media Date</label>
    <type>DateTime</type>
</CustomField>