force-app/main/default/objects/AH_UDC_Contact__c/fields/TermsandConditionsAccepted__c.field-meta.xml
<CustomField>
    <fullName>TermsandConditionsAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates that the contact has accepted the terms and conditions in the   community.</description>
    <inlineHelpText>This indicates that the contact has accepted the terms and conditions in the   community.</inlineHelpText>
    <label>Terms and Conditions Accepted</label>
    <type>Checkbox</type>
</CustomField>