force-app/main/default/objects/AH_UDC_Contact__c/fields/TermsandConditionsAcceptedDate__c.field-meta.xml
<CustomField>
    <fullName>TermsandConditionsAcceptedDate__c</fullName>
    <description>The date the terms and conditions were accepted</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the terms and conditions were accepted</inlineHelpText>
    <label>Terms and Conditions Accepted Date</label>
    <type>DateTime</type>
</CustomField>